# dfhack-client-qt

./: .gitignore  CMakeLists.txt  README.md
cmake/: DFHackClientQtConfig.cmake
console/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
dfhack-client-qt/: Basic.h  Basic.proto  BasicApi.proto  CMakeLists.txt  Client.cpp  Client.h  ClientPrivate.cpp  ClientPrivate.h  CommandResult.cpp  CommandResult.h  Core.cpp  Core.h  CoreProtocol.proto  Function.h  Notifier.cpp  Notifier.h  globals.h  static_string.h
test/: CMakeLists.txt  test-chain.cpp  test-sync.cpp
